Fixed bug #36176 (PDO_PGSQL - PDO::exec() does not return number of rows affected by the operation).